--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react": "17.0.2",
     "react-autosave": "^0.3.0",
     "react-dom": "17.0.2",
+    "react-hot-toast": "^2.1.1",
     "react-query": "^3.34.1",
+    "uuid": "^8.3.2",
     "valtio": "^1.2.7"
   },
   "devDependencies": {
@@ -39,6 +41,7 @@
     "@graphql-codegen/typescript-operations": "^2.2.1",
     "@graphql-codegen/typescript-react-query": "^3.2.2",
     "@types/react": "17.0.37",
+    "@types/uuid": "^8.3.3",
     "apollo-server-core": "^3.5.0",
     "autoprefixer": "^10.4.0",
     "cross-env": "^7.0.3",
